--- a/views/admin/editProduct.ejs
+++ b/views/admin/editProduct.ejs
@@ -39,10 +39,10 @@
           <% product.sizes.forEach((sizeStock, index) => { %>
           <div class="row align-items-center size-stock-row mb-3">
             <div class="col-5">
-              <input type="text" class="form-control size-input" name="size[]" value="<%= sizeStock.size %>" placeholder="Enter size" required />
+              <input type="number" class="form-control size-input" name="size[]" min="5" value="<%= sizeStock.size %>" placeholder="Enter size" required />
             </div>
             <div class="col-5">
-              <input type="number" class="form-control stock-input" name="stock[]" value="<%= sizeStock.stock %>" placeholder="Enter stock" min="0" required />
+              <input type="number" class="form-control stock-input" name="stock[]" value="<%= sizeStock.stock %>" placeholder="Enter stock" min="1" required />
             </div>
             <div class="col-2">
               <button type="button" class="btn btn-danger remove-stock-btn">
@@ -55,10 +55,10 @@
           <!-- Template for Adding New Size-Stock Pair -->
           <div class="row align-items-center size-stock-row mb-3 d-none" id="sizeStockTemplate">
             <div class="col-5">
-              <input type="text" class="form-control size-input" name="size[]" placeholder="Enter size" />
+              <input type="number" class="form-control size-input" name="size[]" min="5" max="12" placeholder="Enter size" />
             </div>
             <div class="col-5">
-              <input type="number" class="form-control stock-input" name="stock[]" placeholder="Enter stock" min="0" />
+              <input type="number" class="form-control stock-input" name="stock[]" min="1" placeholder="Enter stock"  />
             </div>
             <div class="col-2">
               <button type="button" class="btn btn-danger remove-stock-btn">
