--- a/views/admin/salesReport.ejs
+++ b/views/admin/salesReport.ejs
@@ -78,8 +78,8 @@
 
     <!-- Export Buttons -->
     <div class="text-right mt-3">
-        <a href="/admin/export/excel" class="btn btn-success">Download Excel</a>
-        <a href="/admin/export/pdf" class="btn btn-danger">Download PDF</a>
+        <a href="/admin/export/excel" id="downloadExcel" class="btn btn-success">Download Excel</a>
+        <a href="/admin/export/pdf" id="downloadPdf" class="btn btn-danger">Download PDF</a>
     </div>
 
     <div class="d-flex justify-content-center mt-3">
@@ -101,6 +101,28 @@
         <% } %>
     </div>
 </div>
+<script>
+    document.getElementById("downloadPdf").addEventListener("click", (e) => {
+        e.preventDefault();  
+        const dateRange = document.getElementById("date-range").value;  
+
+        const formAction = `/admin/export/pdf?dateRange=${dateRange}`;
+        
+        window.location.href = formAction;
+    });
+
+    document.getElementById("downloadExcel").addEventListener("click", (e) => {
+        e.preventDefault();  
+        const dateRange = document.getElementById("date-range").value;  
+
+        
+        const formAction = `/admin/export/excel?dateRange=${dateRange}`;
+        
+        
+        window.location.href = formAction;
+    });
+</script>
+
 <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11.6.9/dist/sweetalert2.all.min.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
 
