--- a/views/users/partials/footer.ejs
+++ b/views/users/partials/footer.ejs
@@ -16,9 +16,9 @@
                 <h5 class="footer-title">Quick Links</h5>
                 <ul class="list-unstyled footer-links">
                     <li><a href="/about">About Us</a></li>
-                    <li><a href="/contact">Contact</a></li>
-                    <li><a href="/shipping">Shipping Info</a></li>
-                    <li><a href="/returns">Returns</a></li>
+                    <li><a href="#">Contact</a></li>
+                    <li><a href="#">Shipping Info</a></li>
+                    <li><a href="#">Returns</a></li>
                 </ul>
             </div>
             <div class="col-md-4">
