added custom date filter in sales report,google sign working

--- a/views/users/orderDetails.ejs
+++ b/views/users/orderDetails.ejs
@@ -288,7 +288,7 @@
         if (response.ok) {
           Swal.fire({
             icon: "success",
-            title: "Order Returned",
+            title: "Request succesfull",
             text: data.message,
           }).then(() => {
             window.location.href = `/users/orderDetails/${orderId}`;
