--- a/views/users/login.ejs
+++ b/views/users/login.ejs
@@ -8,6 +8,8 @@
         <%= title %>
     </title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
+    <link rel="stylesheet" href="/stylesheets/login.css">
+
     <style>
         .login-container {
             max-width: 450px;
@@ -39,43 +41,40 @@
 
     <div class="container">
         <div class="login-container">
-            <h2 class="text-center mb-4">Login to Your Account</h2>
-
-            
-            <form id="loginForm">
-                <div class="mb-3">
-                    <label for="email" class="form-label">Email address</label>
-                    <input type="email" class="form-control" id="email" name="email" required autofocus>
-                </div>
-                
-                
-                
-                <div class="mb-3">
-                    <label for="password" class="form-label">Password</label>
-                    <input type="password" class="form-control" id="password" name="password" required>
-                </div>
-                
-                
-                <div id="generalError" class="error-message" style="display: none;">Please enter a valid email address.</div>
-                
-
-
-                <button type="submit" class="btn btn-primary w-100">Login</button>
-            </form>
-
-            <div class="text-center mt-3">
-                <p>Don't have an account? <a href="/users/signup">Sign up here</a></p>
-                <p><a href="/users/getForgetPassword">Forgot your password?</a></p>
+          <h2 class="text-center mb-4">Login to Your Account</h2>
+    
+          <form id="loginForm">
+            <div class="mb-3">
+              <label for="email" class="form-label">Email address</label>
+              <input type="email" class="form-control" id="email" name="email" required autofocus placeholder="Enter your email">
             </div>
-            <div>
-                <a href="/users/auth/google" id="googleSignup">
-                  login with google
-                </a>
-          
-              </div>
-          
+    
+            <div class="mb-3">
+              <label for="password" class="form-label">Password</label>
+              <input type="password" class="form-control" id="password" name="password" required placeholder="Enter your password">
+            </div>
+    
+            <div id="generalError" class="error-message" style="display: none;">
+              Please enter a valid email address.
+            </div>
+    
+            <button type="submit" class="btn btn-primary w-100">Login</button>
+          </form>
+    
+          <div class="text-center mt-3">
+            <p>Don't have an account? <a href="/users/signup">Sign up here</a></p>
+            <p><a href="/users/getForgetPassword">Forgot your password?</a></p>
+          </div>
+    
+          <div class="divider">
+            <span>OR</span>
+          </div>
+    
+          <button class="google-btn">
+            <a href="/users/auth/google" id="googleSignup"><i class="fa-brands fa-google"></i>Login with Google</a>
+          </button>
         </div>
-    </div>
+      </div>
 
 
 
