reset password corrected again

--- a/views/users/resetPasswordForm.ejs
+++ b/views/users/resetPasswordForm.ejs
@@ -57,7 +57,7 @@
           title:"success",
           text:data.message,
           confirmButtonText:"OK"
-        }).then(()=> window.location.href = "sneakify.ddns.net/users/login")
+        }).then(()=> window.location.href = "/users/login")
       }
 
     });
