--- a/views/users/profile.ejs
+++ b/views/users/profile.ejs
@@ -24,7 +24,7 @@
           <p><strong>First Name:</strong> <%= user.firstName %></p>
           <p><strong>Last Name:</strong> <%= user.lastName %></p>
           <p><strong>Email:</strong> <%= user.email %></p readonly>
-          <p>Your referral link: <a href="http://localhost:3000/users/signup?ref=<%= user.referralCode %>" target="_blank">http://localhost:3000/users/signup?ref=<%= user.referralCode %></a></p readonly>
+          <p>Your referral link: <a href="https://sneakify.ddns.net/users/signup?ref=<%= user.referralCode %>" target="_blank">https://sneakify.ddns.net/users/signup?ref=<%= user.referralCode %></a></p readonly>
 
 
           <hr>
