some previous changes or just test

--- a/views/users/home.ejs
+++ b/views/users/home.ejs
@@ -2,7 +2,8 @@
     <link rel="stylesheet" href="/stylesheets/home.css">
     
 <!-- Welcome Section -->
-<section class="welcome-section">
+
+<section class="welcome-section color">
     <div class="welcome-content">
         <div class="welcome-text">
             <h1>Welcome to Shoe Destiny</h1>
